fixed login button alignt=ments issues

--- a/front/src/components/login/login.css
+++ b/front/src/components/login/login.css
@@ -35,16 +35,14 @@
 
 .login-form {
     background-color: #fff;
-    padding: 20px;
+    padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 400px;
-
 }
 
 .form-group {
     margin-bottom: 15px;
-    padding-right: 20px;
     justify-content: center;
 
 }
@@ -55,7 +53,7 @@
 }
 
 .form-group input {
-    width: 100%;
+    max-width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 10px;
